[package]
name = "hammersbald"
version = "2.1.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/hammersbald/"
repository = "https://github.com/rust-bitcoin/hammersbald/"
documentation = "https://github.com/rust-bitcoin/hammersbald/"
description = "Hammersbald - fast persistent store for a blockchain"
keywords = [ "blockchain", "bitcoin", "hammersbald" ]
readme = "README.md"

[lib]
name = "hammersbald"
path = "src/lib.rs"

[features]
bitcoin_support=["bitcoin"]

[dependencies]
rand="0.7"
byteorder="1.2"
lru-cache = "0.1.1"
bitcoin_hashes = "0.7"
bitcoin = { version = "0.20", optional = true }


[dev-dependencies]
hex = "0.3"
